# data_game

./: pyproject.toml  run_game_in_shell.py  sav.pickle  sav1.pickle
scripts/: game.py
src/data_game/: DataTypes.py  GameObject.py  GameState.py  GameStatePygame.py  Level.py  Worker.py
