[project]
name = "data-game"
version = "0.1.0"
description = ""
authors = [
    {name = "Peter Johnson"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "scipy (>=1.16.1,<2.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "setuptools (<=71)",
    "pygame-ce (>=2.5.5,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_app = "scripts/game.py:main"
[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.15.0"
[tool.pytest.ini]
filterwarnings = "ignore::DeprecationWarning:pygame.*"
